[package]
name = "to-pdf"
version = "0.1.0"
authors = ["jhonebee <zhangjin19960908@gamil.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.1.0"
sha2 = "0.9.6"
chrono = "0.4.19"
com = "0.4.0"