[package]
name = "opt"
version = "0.1.0"
authors = ["jhonebee <zhangjin19960908@gamil.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sha2 = "0.9.6"
chrono = "0.4.19"
log = "0.4"
env_logger = "0.9.0"
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0"
tokio-cron-scheduler = "0.2.1"